# Twogether

./: .gitignore  README.md
backend/: generate_assymetric_key_pair.py  pyproject.toml
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/auth/: routers.py  schemas.py  services.py
backend/app/api/user/: models.py  routers.py  schemas.py  services.py
backend/app/common/: api.py  constants.py  exception.py  models.py  security.py  services.py  tasks.py  utils.py
backend/app/core/: celery_app.py  config.py  jwt.py  logging.py  redis.py
backend/app/db/: beanie_init.py  mongo.py
backend/app/static/templates/: index.html
backend/keys/: jwt_private.pem  jwt_public.pem
